# quant-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
configs/: base.yaml  sma_experiment.yaml
scripts/: compare_multi_ticker_sma_to_buy_hold.py  compare_sma_to_buy_hold.py  create_benchmark_chart.py  create_experiment_manifest.py  create_monte_carlo_charts.py  create_multi_ticker_benchmark_chart.py  create_performance_charts.py  create_performance_report.py  create_portfolio_charts.py  create_portfolio_strategy_comparison.py  create_research_dashboard.py  create_risk_limits_report.py  create_sma_research_report.py  create_strategy_decision_gate.py  create_transaction_cost_stress_charts.py  create_volatility_targeting_charts.py  create_walk_forward_charts.py  create_walk_forward_summary.py  download_yahoo_prices.py  query_yahoo_duckdb.py  run_configured_sma_experiment.py  run_equal_weight_portfolio_backtest.py  run_full_sma_research_experiment.py  run_monte_carlo_portfolio.py  run_multi_ticker_sma_backtest.py  run_portfolio_volatility_targeting.py  run_sma_backtest.py  run_sma_parameter_sweep.py  run_sma_walk_forward.py  run_transaction_cost_stress_test.py  run_volatility_filtered_sma_backtest.py
src/quantlab/: __init__.py  config.py  decision_gate.py  experiment_manifest.py  reporting.py  research_dashboard.py  research_performance.py  risk_limits.py  visualization.py
tests/unit/: test_benchmark.py  test_config.py  test_cost_stress.py  test_cost_stress_chart_script.py  test_cost_stress_visualization.py  test_decision_gate.py  test_paths.py  (+35 more)
(+16 files in other folders)
