[project]
name = "quantlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph Matemilola", email = "joematem@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "jupyterlab>=4.6.1",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "rich>=15.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "statsmodels>=0.14.6",
    "typer>=0.26.8",
]

[project.scripts]
quantlab = "quantlab:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.20",
]
